# n8n-agentic-dev-scaffolding

./: .env.dev.example  .env.example  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  admin.py  build-skill-dist.sh  conftest.py  helpers.py  install.md  pyproject.toml  run.py  setup.sh  test_gated_tests_ran.py  test_helpers.py  test_hydrate.py  test_run.py
.claude/: ralph-loop.local.md
.claude-plugin/: plugin.json
cloud_functions/: AGENTS.md  app.py  railpack.json  railway.toml  registry.py
docs/: competitive-comparison-2026-05-02.md  independent-review-2026-04-30.md  migration-from-d6848fd.md
factory/: AGENTS.md
helpers/: _dspy_config.py  activate.py  add_cloud_function.py  add_lock_to_workflow.py  add_queue_consumer_to_workflow.py  add_queue_publish_to_workflow.py  add_rate_limit_to_workflow.py  archive.py  bootstrap_env.py  cleanup_queue_state.py  config.py  copy_primitive.py  create_lock.py  create_queue.py  create_workflow.py  deactivate.py  dehydrate.py  dependency_graph.py  deploy.py  deploy_all.py  deploy_run_assert.py  diff.py  doctor.py  find_skills.py  hydrate.py  init.py  inspect_execution.py  iterate_prompt.py  list_executions.py  manage_credentials.py  manage_variables.py  n8n_client.py  package.json  register_error_handler.py  resync.py  resync_all.py  run.py  stop_executions.py  test_functions.py  tidy_shim.mjs  (+4 more)
hooks/: auto_tidy.py  hooks.json
meta-evals/: .gitignore  README.md  runner.py
n8n/: deployment_order.yaml
pattern-skills/: credential-refs.md  error-handling.md  llm-providers.md  (+5 more)
(+248 files in other folders)
